// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot for "inso --help" 1`] = `
"Usage: inso [options] [command]

A CLI for Insomnia!
  With this tool you can test, lint, and export your Insomnia data.
  
  Testing: Inso accepts 3 types of input:
    Insomnia application data - will be automatically detected, or you can set --workingDir to an alternaitve application data path.
    Insomnia export files - set --src to the file path.
    Git repositories - set --workingDir to the repository path.

  Inso also supports configuration files, by default it will look for .insorc in the current working directory or --workingDir.


Options:
  -v, --version           output the version number
  -w, --workingDir <dir>  set working directory, defaults to current working
                          directory, will detect a git repository or Insomnia
                          data directory
  --src <file>            set the Insomna export file read from
  --verbose               show additional logs while running the command
  --ci                    run in CI, disables all prompts, defaults to false
                          (default: false)
  --config <path>         path to configuration file containing above options
  --printOptions          print the loaded options
  -h, --help              display help for command

Commands:
  run                     Execution utilities
  lint                    Linting utilities
  export                  Export data from insomnia models
  script <script-name>    Run scripts defined in .insorc
  help [command]          display help for command"
`;

exports[`Snapshot for "inso -h" 1`] = `
"Usage: inso [options] [command]

A CLI for Insomnia!
  With this tool you can test, lint, and export your Insomnia data.
  
  Testing: Inso accepts 3 types of input:
    Insomnia application data - will be automatically detected, or you can set --workingDir to an alternaitve application data path.
    Insomnia export files - set --src to the file path.
    Git repositories - set --workingDir to the repository path.

  Inso also supports configuration files, by default it will look for .insorc in the current working directory or --workingDir.


Options:
  -v, --version           output the version number
  -w, --workingDir <dir>  set working directory, defaults to current working
                          directory, will detect a git repository or Insomnia
                          data directory
  --src <file>            set the Insomna export file read from
  --verbose               show additional logs while running the command
  --ci                    run in CI, disables all prompts, defaults to false
                          (default: false)
  --config <path>         path to configuration file containing above options
  --printOptions          print the loaded options
  -h, --help              display help for command

Commands:
  run                     Execution utilities
  lint                    Linting utilities
  export                  Export data from insomnia models
  script <script-name>    Run scripts defined in .insorc
  help [command]          display help for command"
`;

exports[`Snapshot for "inso export -h" 1`] = `
"Usage: inso export [options] [command]

Export data from insomnia models

Options:
  -h, --help                   display help for command

Commands:
  spec [options] [identifier]  Export an API Specification to a file,
                               identifier can be an API Spec id or a file path
  help [command]               display help for command"
`;

exports[`Snapshot for "inso export spec -h" 1`] = `
"Usage: inso export spec [options] [identifier]

Export an API Specification to a file, identifier can be an API Spec id or a
file path

Options:
  -o, --output <path>    save the generated config to a file
  -s, --skipAnnotations  remove all "x-kong-" annotations, defaults to false
                         (default: false)
  -h, --help             display help for command"
`;

exports[`Snapshot for "inso generate -h" 1`] = `
"Usage: inso [options] [command]

A CLI for Insomnia!
  With this tool you can test, lint, and export your Insomnia data.
  
  Testing: Inso accepts 3 types of input:
    Insomnia application data - will be automatically detected, or you can set --workingDir to an alternaitve application data path.
    Insomnia export files - set --src to the file path.
    Git repositories - set --workingDir to the repository path.

  Inso also supports configuration files, by default it will look for .insorc in the current working directory or --workingDir.


Options:
  -v, --version           output the version number
  -w, --workingDir <dir>  set working directory, defaults to current working
                          directory, will detect a git repository or Insomnia
                          data directory
  --src <file>            set the Insomna export file read from
  --verbose               show additional logs while running the command
  --ci                    run in CI, disables all prompts, defaults to false
                          (default: false)
  --config <path>         path to configuration file containing above options
  --printOptions          print the loaded options
  -h, --help              display help for command

Commands:
  run                     Execution utilities
  lint                    Linting utilities
  export                  Export data from insomnia models
  script <script-name>    Run scripts defined in .insorc
  help [command]          display help for command"
`;

exports[`Snapshot for "inso help" 1`] = `
"Usage: inso [options] [command]

A CLI for Insomnia!
  With this tool you can test, lint, and export your Insomnia data.
  
  Testing: Inso accepts 3 types of input:
    Insomnia application data - will be automatically detected, or you can set --workingDir to an alternaitve application data path.
    Insomnia export files - set --src to the file path.
    Git repositories - set --workingDir to the repository path.

  Inso also supports configuration files, by default it will look for .insorc in the current working directory or --workingDir.


Options:
  -v, --version           output the version number
  -w, --workingDir <dir>  set working directory, defaults to current working
                          directory, will detect a git repository or Insomnia
                          data directory
  --src <file>            set the Insomna export file read from
  --verbose               show additional logs while running the command
  --ci                    run in CI, disables all prompts, defaults to false
                          (default: false)
  --config <path>         path to configuration file containing above options
  --printOptions          print the loaded options
  -h, --help              display help for command

Commands:
  run                     Execution utilities
  lint                    Linting utilities
  export                  Export data from insomnia models
  script <script-name>    Run scripts defined in .insorc
  help [command]          display help for command"
`;

exports[`Snapshot for "inso lint -h" 1`] = `
"Usage: inso lint [options] [command]

Linting utilities

Options:
  -h, --help         display help for command

Commands:
  spec [identifier]  Lint an API Specification, identifier can be an API Spec
                     id or a file path
  help [command]     display help for command"
`;

exports[`Snapshot for "inso lint spec -h" 1`] = `
"Usage: inso lint spec [options] [identifier]

Lint an API Specification, identifier can be an API Spec id or a file path

Options:
  -h, --help  display help for command"
`;

exports[`Snapshot for "inso run -h" 1`] = `
"Usage: inso run [options] [command]

Execution utilities

Options:
  -h, --help                   display help for command

Commands:
  test [options] [identifier]  Run Insomnia unit test suites, identifier can be
                               a test suite id or a API Spec id
  help [command]               display help for command"
`;

exports[`Snapshot for "inso run test -h" 1`] = `
"Usage: inso run test [options] [identifier]

Run Insomnia unit test suites, identifier can be a test suite id or a API Spec
id

Options:
  -e, --env <identifier>         environment to use
  -t, --testNamePattern <regex>  run tests that match the regex
  -r, --reporter <reporter>      reporter to use, options are [dot, list, min,
                                 progress, spec] (default: spec)
  -b, --bail                     abort ("bail") after first test failure
  --keepFile                     do not delete the generated test file
  --disableCertValidation        disable certificate validation for requests
                                 with SSL
  -h, --help                     display help for command"
`;
